@@ -611,3 +611,5 @@ FIXED: Fixed crashing when a MIDI music interrupted another one.
 FIXED: Make it possible to go through a certain closed gate on level 11 of Demo by Suave Prince.
 	Details: https://forum.princed.org/viewtopic.php?p=32326#p32326
 	Testcase: replays-testcases/Demo by Suave Prince level 11.p1r
+FIXED: When the prince jumps up at the bottom of a big pillar split between two rooms, a part near the top of the screen disappears.
+	Example: The top row in the first room of the original level 5.
